# agentic

./: .gitignore  CLI_TESTBED.md  CORRECTED_DATA_FLOW.md  DATA_FLOW_DIAGRAM.md  DESIGN.md  EMBEDDING_KNOWLEDGE_GUIDE.md  FRAMEWORK_DATA_FLOW.md  KNOWLEDGE_GUIDE.md  KNOWLEDGE_INTEGRATION_GUIDE.md  LICENSE  PROMPTS_GUIDE.md  README.md  SYSTEM_PROMPTS_GUIDE.md  TODO.md  UPDATED_DATA_FLOW.md  billing_procedures.md  company_policies.md  example_system_prompts.py  knowledge_demo.py  my_test_agent.py  pyproject.toml  setup.py  test_billing_flow.py  test_bob_fixes.py  test_conversation_flow.py  test_embedding_knowledge.py  test_knowledge_integration.py  test_knowledge_response.py  test_memory_fix.py
agentic/: __init__.py  agent.py  classification.py  models.py  system_prompts.py  tools.py
agentic/examples/: __init__.py  helpdesk_agent.py
src/: classification.py  cli.py  knowledge.py  testing.py
src/agentic/: __init__.py  agent.py  classification.py  models.py  tools.py
src/agentic/examples/: code_review_agent.py  helpdesk_agent.py
src/examples/: demo_agent.py
tests/: test_agent.py  test_demo_feedback.py  test_edge_cases.py  test_integration.py  test_mock.py  test_nodes.py  test_performance.py  test_user_context.py
