[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic"
version = "0.1.0"
description = "Simplified framework for building agentic AI systems"
authors = [{name = "Agentic Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph",
    "pydantic>=2.0",
    "langchain-core",
    "langchain-openai",
    "click>=8.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
embeddings = [
    "chromadb>=0.4.0",
    "openai>=1.0.0",
]
dev = [
    "pytest",
    "mypy",
    "black",
]
all = [
    "mcp>=1.0.0",
    "chromadb>=0.4.0", 
    "openai>=1.0.0",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[project.scripts]
agentic = "agentic.cli:cli"

[tool.setuptools]
packages = ["agentic", "agentic.examples"]
package-dir = {"agentic" = "src"}